--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css --minify",
-    "dev": "concurrently \"npm run dev:css\" \"remix dev\" \"npm run start\"",
+    "dev": "concurrently \"npm run dev:css\" \"node -r dotenv/config node_modules/.bin/remix dev\" \"npm run start\"",
     "dev:css": "tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css --watch",
     "postinstall": "remix setup cloudflare-workers",
     "build:worker": "esbuild --define:process.env.NODE_ENV='\"production\"' --minify --bundle --sourcemap --outdir=dist ./worker",
@@ -19,6 +19,7 @@
     "@heroicons/react": "^1.0.5",
     "@remix-run/cloudflare-workers": "^1.1.1",
     "@remix-run/react": "^1.1.1",
+    "@supabase/supabase-js": "^1.29.2",
     "@tailwindcss/forms": "^0.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -35,7 +36,8 @@
     "esbuild": "0.13.14",
     "miniflare": "2.0.0-next.3",
     "tailwindcss": "^3.0.7",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "dotenv": "^14.2.0"
   },
   "engines": {
     "node": ">=14"
