--- a/package.json
+++ b/package.json
@@ -1,47 +1,46 @@
 {
+  "name": "remix-template-cloudflare-workers",
   "private": true,
-  "name": "bob-ross",
   "description": "",
   "license": "",
+  "sideEffects": false,
+  "main": "build/index.js",
   "scripts": {
-    "build": "npm run build:css && remix build",
+    "build": "remix build",
+    "deploy": "npm run build && wrangler publish",
+    "dev:remix": "remix watch",
+    "dev:miniflare": "cross-env NODE_ENV=development miniflare ./build/index.js --watch",
+    "dev": "concurrently \"npm run dev:css\" \"remix build\" \"run-p dev:*\"",
+    "start": "cross-env NODE_ENV=production miniflare ./build/index.js",
     "build:css": "tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css --minify",
-    "dev": "concurrently \"npm run dev:css\" \"node -r dotenv/config node_modules/.bin/remix dev\" \"npm run start\"",
-    "dev:css": "tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css --watch",
-    "postinstall": "remix setup cloudflare-workers",
-    "build:worker": "esbuild --define:process.env.NODE_ENV='\"production\"' --minify --bundle --sourcemap --outdir=dist ./worker",
-    "dev:worker": "esbuild --define:process.env.NODE_ENV='\"development\"' --bundle --sourcemap --outdir=dist ./worker",
-    "start": "miniflare --build-command \"npm run dev:worker\" --watch",
-    "deploy": "npm run build && wrangler publish"
+    "dev:css": "tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css --watch"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
-    "@remix-run/cloudflare-workers": "^1.1.1",
-    "@remix-run/react": "^1.1.1",
-    "@supabase/supabase-js": "^1.29.2",
-    "@tailwindcss/forms": "^0.4.0",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "@remix-run/cloudflare": "^1.3.5",
+    "@remix-run/cloudflare-workers": "^1.3.5",
+    "@remix-run/react": "^1.3.5",
+    "@supabase/supabase-js": "^1.33.3",
+    "cross-env": "^7.0.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remix": "^1.1.1"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^2.2.2",
-    "@cloudflare/wrangler": "^1.19.6",
-    "@remix-run/dev": "^1.1.1",
-    "@remix-run/serve": "^1.1.1",
+    "@cloudflare/workers-types": "^3.4.0",
+    "@remix-run/dev": "^1.3.5",
+    "@remix-run/eslint-config": "^1.3.5",
+    "@tailwindcss/forms": "^0.5.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "concurrently": "^6.5.0",
-    "esbuild": "0.13.14",
-    "miniflare": "2.0.0-next.3",
-    "tailwindcss": "^3.0.7",
-    "typescript": "^4.1.2",
-    "dotenv": "^14.2.0"
+    "concurrently": "^7.1.0",
+    "eslint": "^8.11.0",
+    "miniflare": "^2.1.0",
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.5.5"
   },
   "engines": {
     "node": ">=14"
-  },
-  "sideEffects": false,
-  "main": "dist/worker.js"
+  }
 }
